@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kde-env
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-env/ChangeLog,v 1.48 2009/10/18 13:14:16 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-env/ChangeLog,v 1.49 2009/11/02 20:55:21 wired Exp $
+
+*kde-env-4.3.3 (02 Nov 2009)
+
+  02 Nov 2009; Alex Alexander <wired@gentoo.org> +kde-env-4.3.3.ebuild:
+  Version bump
 
   18 Oct 2009; Markus Meier <maekke@gentoo.org> kde-env-4.3.1.ebuild:
   x86 stable, bug #287697
